<resources>
    <string name="app_name">Learning Activity</string>
    <string name="action_settings">Settings</string>
    <string name="action_edit">Edit</string>
    <string name="action_save">Save</string>
    <string name="action_delete">Delete</string>
    <string name="action_create_text_file">Create</string>
    <string name="box">Stuff</string>
    <string name="title_activity_maps">Map</string>
    <string name="action_search">Search</string>
    <string name="title_activity_maps2">Map</string>
    <string name="title_activity_media_main">MediaMainActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="play_icon">&#62;</string>
    <string name="play_next">&#62;&#62;</string>
    <string name="play_back">&#60;</string>
    <string name="play_previous">&#60;&#60;</string>
    <string name="play_pause">||</string>
    <string name="player_music">Music Player</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="description">Media Controller</string>

    <string name="title_activity_video">VideoActivity</string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="TestButton">B</string>
    <string name="title_activity_test_media_nav_drawer">TestMediaNavDrawer</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_black">BlackActivity</string>
    <string name="title_activity_nav_draw">NavDraw</string>

</resources>
