<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".medialearnactivity.MediaMainActivity$PlaceholderFragment">


    <TextView android:text="@string/player_music" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textVIew_player_head"
        android:textSize="35sp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:layout_below="@+id/textVIew_player_head"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/play_next"
        android:id="@+id/btn_player_next"
        android:layout_alignParentBottom="true"
        android:layout_toEndOf="@+id/seekBar" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/play_pause"
        android:id="@+id/btn_player_pause"
        android:layout_alignParentBottom="true"
        android:layout_toStartOf="@+id/btn_player_play" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/play_icon"
        android:id="@+id/btn_player_play"
        android:layout_alignParentBottom="true"
        android:layout_toEndOf="@+id/imageView" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/play_previous"
        android:id="@+id/btn_player_previous"
        android:layout_alignParentBottom="true"
        android:layout_toStartOf="@+id/seekBar" />

    <SeekBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/seekBar"
        android:layout_alignLeft="@+id/textVIew_player_head"
        android:layout_alignStart="@+id/textVIew_player_head"
        android:layout_alignRight="@+id/textVIew_player_head"
        android:layout_alignEnd="@+id/textVIew_player_head"
        android:layout_above="@+id/btn_player_pause" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="Small Text"
        android:id="@+id/textView_playtime"
        android:layout_above="@+id/seekBar" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="2dp"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="Small Text"
        android:id="@+id/textView_song_length"
        android:layout_alignTop="@+id/textView_playtime"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Medium Text"
        android:id="@+id/textView_song_name"
        android:layout_alignBaseline="@+id/textView_playtime"
        android:layout_alignBottom="@+id/textView_playtime"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
